--- a/funding.html
+++ b/funding.html
@@ -60,8 +60,11 @@
 </li>
 </ul>
 <table class="imgtable"><tr><td>
-<img src="images/tshirt.png" alt="150" width="700px" />&nbsp;</td>
-<td align="left"><p>[Figure] Adversarial T-shirt</p>
+<img src="images/tshirt.png" alt="120" width="560px" />&nbsp;</td>
+<td align="left">
+<p><video width="416" height="312" controls>
+	<source src="images/AdvTshirt.mp4" type=video/mp4>
+</video></p>
 </td></tr></table>
 <ul>
 <li><p><b>Second</b>, our ICLR’21 work [<a href="https://openreview.net/pdf?id=PH5PH9ZO_4">paper</a>, <a href="https://github.com/ALFA-group/adversarial-code-generation">code</a>, <a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">MIT-News</a>] designed &lsquo;Adversarial Program’, a method for finding and fixing weaknesses in automated programming tools. We have found that code-processing models can be deceived simply by renaming a variable, inserting a bogus print statement, or introducing other cosmetic operations into programs the model tries to process. These subtly altered programs function normally, but dupe the model into processing them incorrectly, rendering the wrong decision.  We show that our best attack proposal achieves a 52% improvement over a state-of-the-art attack generation approach for programs trained on a SEQ2SEQ model. We also show that the proposed adversarial programs can be further exploited to train a program languaging model robust against prediction-evasion attacks.</p>
@@ -70,25 +73,25 @@
 </li>
 </ul>
 <ol>
-<li><p>S. Srikant, <b>S. Liu</b>, T. Mitrovska, S. Chang, Q. Fan, G. Zhang, U.-M. O'Reilly, Generating Adversarial Computer Programs using Optimized Obfuscations, ICLR’21</p>
+<li><p>S. Srikant, <b>S. Liu</b>, T. Mitrovska, S. Chang, Q. Fan, G. Zhang, U.-M. O'Reilly, <a href="https://arxiv.org/abs/2103.11882">Generating Adversarial Computer Programs using Optimized Obfuscations</a>, <i>ICLR’21</i></p>
 </li>
-<li><p>K. Xu, G. Zhang, <b>S. Liu</b>, Q. Fan, M. Sun, H. Chen, P.-Y. Chen, Y. Wang, X. Lin, Adversarial T-shirt! Evading Person Detectors in A Physical World, ECCV’20 </p>
+<li><p>K. Xu, G. Zhang, <b>S. Liu</b>, Q. Fan, M. Sun, H. Chen, P.-Y. Chen, Y. Wang, X. Lin, <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123500647.pdf">Adversarial T-shirt! Evading Person Detectors in A Physical World</a>, <i>ECCV’20</i> </p>
 </li>
-<li><p>R. Wang, G. Zhang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong, M. Wang, Practical Detection of Trojan Neural Networks: Data-Limited and Data-Free Cases, ECCV’20</p>
+<li><p>R. Wang, G. Zhang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong, M. Wang, <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123680222.pdf">Practical Detection of Trojan Neural Networks: Data-Limited and Data-Free Cases</a>, <i>ECCV’20</i></p>
 </li>
-<li><p>A. Boopathy, <b>S. Liu</b>, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel, Proper Network Interpretability Helps Adversarial Robustness in Classification, ICML’20</p>
+<li><p>A. Boopathy, <b>S. Liu</b>, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel, <a href="http://proceedings.mlr.press/v119/boopathy20a.html">Proper Network Interpretability Helps Adversarial Robustness in Classification</a>, <i>ICML’20</i></p>
 </li>
-<li><p>T. Chen, <b>S. Liu</b>, S. Chang, Y. Cheng, L. Amini, Z. Wang, Adversarial Robustness: From Self-Supervised Pretraining to Fine-Tuning, CVPR’20</p>
+<li><p>T. Chen, <b>S. Liu</b>, S. Chang, Y. Cheng, L. Amini, Z. Wang, <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Chen_Adversarial_Robustness_From_Self-Supervised_Pre-Training_to_Fine-Tuning_CVPR_2020_paper.pdf">Adversarial Robustness: From Self-Supervised Pretraining to Fine-Tuning</a>, <i>CVPR’20</i></p>
 </li>
-<li><p>K. Xu, H. Chen, <b>S. Liu</b>, P.-Y. Chen, T.-W. Wen, M. Hong, X. Lin, Topology Attack and Defense for Graph Neural Networks: An Optimization Perspective, IJCAI’19</p>
+<li><p>K. Xu, H. Chen, <b>S. Liu</b>, P.-Y. Chen, T.-W. Wen, M. Hong, X. Lin, <a href="https://www.ijcai.org/Proceedings/2019/0550.pdf">Topology Attack and Defense for Graph Neural Networks: An Optimization Perspective</a>, <i>IJCAI’19</i></p>
 </li>
-<li><p>K. Xu, <b>S. Liu</b>, P. Zhao, P.-Y. Chen, H. Zhang, D. Erdogmus, Y. Wang, X. Lin, Structured Adversarial Attack: Towards General Implementation and Better Interpretability, ICLR’19</p>
+<li><p>K. Xu, <b>S. Liu</b>, P. Zhao, P.-Y. Chen, H. Zhang, D. Erdogmus, Y. Wang, X. Lin, <a href="https://arxiv.org/pdf/1808.01664.pdf">Structured Adversarial Attack: Towards General Implementation and Better Interpretability</a>, <i>ICLR’19</i></p>
 </li>
 </ol>
 <h2>Zeroth-Order (ZO) Optimization: Theory, Methods and Applications [<a href="https://ieeexplore.ieee.org/document/9186148">Tutorial work</a> on IEEE Signal Processing Magazine]</h2>
 <p><b>Description</b>: ZO optimization (learning without gradients) is increasingly embraced for solving many machine learning (ML) problems, where explicit expressions of the gradients are difficult or infeasible to obtain. Appealing applications include, e.g., robustness evaluation of black-box deep neural networks (DNNs), hyper-parameter optimization for automated ML, meta-learning, DNN diagnosis and explanation, and scientific discovery using black-box simulators. An illustrative example of ZO optimization versus first-order optimization is shown below.</p>
 <table class="imgtable"><tr><td>
-<img src="images/ZO.png" alt="150" width="700px" />&nbsp;</td>
+<img src="images/ZO.png" alt="90" width="420px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <p><b>Two of our achievements are highlighted below.</b></p>
 <ul>
@@ -100,25 +103,25 @@
 </li>
 </ul>
 <ol>
-<li><p><b>S. Liu</b>, B. Kailkhura, P.-Y. Chen, P. Ting, S. Chang, L. Amini, Zeroth-Order Stochastic Variance Reduction for Nonconvex Optimization, NeurIPS’18</p>
+<li><p><b>S. Liu</b>, B. Kailkhura, P.-Y. Chen, P. Ting, S. Chang, L. Amini, <a href="https://papers.nips.cc/paper/2018/file/ba9a56ce0a9bfa26e8ed9e10b2cc8f46-Paper.pdf">Zeroth-Order Stochastic Variance Reduction for Nonconvex Optimization</a>, <i>NeurIPS’18</i></p>
 </li>
-<li><p>C.-C. Tu, P. Ting, P.-Y. Chen, <b>S. Liu</b>, H. Zhang, J. Yi, C.-J. Hsieh, S.-M. Cheng, AutoZOOM: Autoencoder-based Zeroth Order Optimization Method for Attacking Black-box Neural Networks, AAAI’19</p>
+<li><p>C.-C. Tu, P. Ting, P.-Y. Chen, <b>S. Liu</b>, H. Zhang, J. Yi, C.-J. Hsieh, S.-M. Cheng, <a href="https://arxiv.org/pdf/1805.11770v1.pdf">AutoZOOM: Autoencoder-based Zeroth Order Optimization Method for Attacking Black-box Neural Networks</a>, <i>AAAI’19</i></p>
 </li>
-<li><p><b>S. Liu</b>, P.-Y. Chen, X. Chen, M. Hong, SignSGD via Zeroth-Order Oracle, ICLR’19</p>
+<li><p><b>S. Liu</b>, P.-Y. Chen, X. Chen, M. Hong, <a href="https://openreview.net/pdf?id=BJe-DsC5Fm">SignSGD via Zeroth-Order Oracle</a>, <i>ICLR’19</i></p>
 </li>
-<li><p>P. Zhao, <b>S. Liu</b>, P.-Y. Chen, N. Hoang, K. Xu, B. Kailkhura, X. Lin, On the Design of Black-box Adversarial Examples by Leveraging Gradient-free Optimization and Operator Splitting Method, ICCV’19</p>
+<li><p>P. Zhao, <b>S. Liu</b>, P.-Y. Chen, N. Hoang, K. Xu, B. Kailkhura, X. Lin, <a href="https://par.nsf.gov/servlets/purl/10184578">On the Design of Black-box Adversarial Examples by Leveraging Gradient-free Optimization and Operator Splitting Method</a>, <i>ICCV’19</i></p>
 </li>
-<li><p>X. Chen, <b>S. Liu</b>, K. Xu, X. Li, X. Lin, M. Hong, D. Cox, ZO-AdaMM: Zeroth-Order Adaptive Momentum Method for Black-Box Optimization, NeurIPS’19</p>
+<li><p>X. Chen, <b>S. Liu</b>, K. Xu, X. Li, X. Lin, M. Hong, D. Cox, <a href="https://arxiv.org/pdf/1910.06513.pdf">ZO-AdaMM: Zeroth-Order Adaptive Momentum Method for Black-Box Optimization</a>, <i>NeurIPS’19</i></p>
 </li>
-<li><p>M. Cheng, S. Singh, P.-Y. Chen, <b>S. Liu</b>, C.-J. Hsieh, <a href="https://arxiv.org/pdf/1909.10773.pdf">Sign-OPT: A Query-Efficient Hard-label Adversarial Attack</a>, ICLR’20</p>
+<li><p>M. Cheng, S. Singh, P.-Y. Chen, <b>S. Liu</b>, C.-J. Hsieh, <a href="https://arxiv.org/pdf/1909.10773.pdf">Sign-OPT: A Query-Efficient Hard-label Adversarial Attack</a>, <i>ICLR’20</i></p>
 </li>
-<li><p><b>S. Liu</b>, S. Lu, X. Chen, Y. Feng, K. Xu, A. Al-Dujaili, M. Hong, U.-M. O'Reilly, <a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization without Gradients: Convergence and Applications to Adversarial ML</a>, ICML’20</p>
+<li><p><b>S. Liu</b>, S. Lu, X. Chen, Y. Feng, K. Xu, A. Al-Dujaili, M. Hong, U.-M. O'Reilly, <a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization without Gradients: Convergence and Applications to Adversarial ML</a>, <i>ICML’20</i></p>
 </li>
 </ol>
 <h1>Research Support</h1>
 <p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a> and <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>.</p>
 <table class="imgtable"><tr><td>
-<img src="images/support.png" alt="150" width="700px" />&nbsp;</td>
+<img src="images/support.png" alt="90" width="420px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 </td>
 </tr>
