--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,9 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>N. Liu, G. Yuan, Z. Che, X. Shen, X. Ma, Q. Jin, J. Ren, J. Tang, <b>S. Liu</b>, Y. Wang,
+Lottery Ticket Preserves Weight Correlation: Is It Desirable or Not?, <i>ICML&rsquo;21</i></p>
+</li>
 <li><p>Z. Li, G. Yuan, W. Niu, Y. Li, P. Zhao, Y. Cai, X. Shen, Z. Zhan, Z. Kong, Q. Jin, Z. Chen, <b>S. Liu</b>, K. Yang, Y. Wang, B. Ren, and X. Lin. NPAS: A compiler-aware framework of unified network pruning and architecture search for beyond real-time mobile acceleration, <i>CVPR&rsquo;21 (Oral)</i></p>
 </li>
 <li><p>T. Chen, J. Frankle, S. Chang, <b>S. Liu</b>, Y. Zhang, M. Carbin, and Z. Wang. <a href="https://arxiv.org/pdf/2012.06908.pdf">The Lottery Tickets Hypothesis for Supervised and Self-supervised Pre-training in Computer Vision Models</a>, <i>CVPR&rsquo;21</i></p>
