--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
+<div class="menu-item"><a href="links\CV_SL_2021.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
@@ -70,7 +70,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA AIE RED Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-19 15:27:04 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-06-07 19:35:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
