--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
 <p>* Call for Application: Adversarial Machine Learning Rising Star Award at <a href="https://sites.google.com/view/advml/advml-rising-star-award">AdvML&rsquo;21</a>.</p>
-<p>* Our MSU-NEU team (with PIs <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a> and <a href="https://web.northeastern.edu/xuelin/?page_id=60">Xue Lin</a>) entered the Phase 2 of DARPA AIE RED.</p>
+<p>* Our MSU-NEU team (with PI <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a> and co-PI <a href="https://web.northeastern.edu/xuelin/?page_id=60">Xue Lin</a>) entered the Phase 2 of DARPA AIE RED.</p>
 <p>* <i>One</i> paper in <a href="https://icml.cc">ICML 2021</a></p>
 <p>* MIT news ‘<a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">Toward deep-learning models that can reason about code more like humans</a>’ on our ICLR’21 work ‘Adversarial Programs’ [<a href="https://openreview.net/pdf?id=PH5PH9ZO_4">paper</a>, <a href="https://github.com/ALFA-group/adversarial-code-generation">code</a>].</p>
 <p>* <i>Two</i> papers in <a href="http://cvpr2021.thecvf.com">CVPR 2021</a>.</p>
@@ -71,7 +71,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA AIE RED Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-09 18:00:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-09 16:30:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
