--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
+<div class="menu-item"><a href="links\CV_SL_2021.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
@@ -31,6 +31,16 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>X. Ma, G. Yuan, X. Shen, T. Chen, X. Chen, X. Chen, N. Liu, M. Qin, <b>S. Liu</b>, Z. Wang, Y. Wang. Sanity Checks for Lottery Tickets: Does Your Winning Ticket Really Win the Jackpot?, <i>NeurIPS&rsquo;21</i></p>
+</li>
+<li><p>L. Fan, <b>S. Liu</b>, P.-Y. Chen, G. Zhang, C. Gan. When does Contrastive Learning Preserve Adversarial Robustness from Pretraining to Finetuning?, <i>NeurIPS&rsquo;21</i></p>
+</li>
+<li><p>G. Yuan, X. Ma, W. Niu, Z. Li, Z. Kong, N. Liu, Y. Gong, Z. Zhan, C. He, Q. Jin, S. Wang, M. Qin, B. Ren, Y. Wang, <b>S. Liu</b>, X. Lin. MEST: Accurate and Fast Memory-Economic Sparse Training Framework on the Edge, <i>NeurIPS&rsquo;21  (spotlight)</i></p>
+</li>
+<li><p>J. Wang, T. Zhang, <b>S. Liu</b>, P.-Y. Chen, J. Xu, M. Fardad, B. Li. Adversarial Attack Generation Empowered by Min-Max Optimization, <i>NeurIPS&rsquo;21</i></p>
+</li>
+<li><p>S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong. <a href="https://openreview.net/forum?id=8pz6GXZ3YT">Why Lottery Ticket Wins? A Theoretical Perspective of Sample Complexity on Sparse Neural Networks</a>, <i>NeurIPS&rsquo;21</i></p>
+</li>
 <li><p>N. Liu, G. Yuan, Z. Che, X. Shen, X. Ma, Q. Jin, J. Ren, J. Tang, <b>S. Liu</b>, Y. Wang,
 Lottery Ticket Preserves Weight Correlation: Is It Desirable or Not?, <i>ICML&rsquo;21</i></p>
 </li>
