--- a/publications.html
+++ b/publications.html
@@ -35,11 +35,11 @@
 </li>
 <li><p>L. Fan, <b>S. Liu</b>, P.-Y. Chen, G. Zhang, C. Gan. When does Contrastive Learning Preserve Adversarial Robustness from Pretraining to Finetuning?, <i>NeurIPS&rsquo;21</i></p>
 </li>
-<li><p>G. Yuan, X. Ma, W. Niu, Z. Li, Z. Kong, N. Liu, Y. Gong, Z. Zhan, C. He, Q. Jin, S. Wang, M. Qin, B. Ren, Y. Wang, <b>S. Liu</b>, X. Lin. MEST: Accurate and Fast Memory-Economic Sparse Training Framework on the Edge, <i>NeurIPS&rsquo;21  (spotlight)</i></p>
+<li><p>G. Yuan, X. Ma, W. Niu, Z. Li, Z. Kong, N. Liu, Y. Gong, Z. Zhan, C. He, Q. Jin, S. Wang, M. Qin, B. Ren, Y. Wang, <b>S. Liu</b>, X. Lin. MEST: Accurate and Fast Memory-Economic Sparse Training Framework on the Edge, <i>NeurIPS&rsquo;21  (Spotlight)</i></p>
 </li>
 <li><p>J. Wang, T. Zhang, <b>S. Liu</b>, P.-Y. Chen, J. Xu, M. Fardad, B. Li. Adversarial Attack Generation Empowered by Min-Max Optimization, <i>NeurIPS&rsquo;21</i></p>
 </li>
-<li><p>S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong. <a href="https://openreview.net/forum?id=8pz6GXZ3YT">Why Lottery Ticket Wins? A Theoretical Perspective of Sample Complexity on Sparse Neural Networks</a>, <i>NeurIPS&rsquo;21</i></p>
+<li><p>S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong. Why Lottery Ticket Wins? A Theoretical Perspective of Sample Complexity on Sparse Neural Networks, <i>NeurIPS&rsquo;21</i></p>
 </li>
 <li><p>N. Liu, G. Yuan, Z. Che, X. Shen, X. Ma, Q. Jin, J. Ren, J. Tang, <b>S. Liu</b>, Y. Wang,
 Lottery Ticket Preserves Weight Correlation: Is It Desirable or Not?, <i>ICML&rsquo;21</i></p>
