--- a/group.html
+++ b/group.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
+<div class="menu-item"><a href="links\CV_SL_2021.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
@@ -40,7 +40,7 @@
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/damon.jpg" alt="94" width="91px" />&nbsp;</td>
+<img src="images/damon_cir.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://damon-demon.github.io">Yimeng(Damon) Zhang</a></p>
 </li>
