--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>C. Fan, P. Ram and <b>S. Liu</b>, Sign-MAML: Efficient Model-Agnostic Meta-Learning by SignSGD, <i>NeurIPS Workshop MetaLearn, 2021</i></p>
+</li>
 <li><p>X. Ma, G. Yuan, X. Shen, T. Chen, X. Chen, X. Chen, N. Liu, M. Qin, <b>S. Liu</b>, Z. Wang, Y. Wang. Sanity Checks for Lottery Tickets: Does Your Winning Ticket Really Win the Jackpot?, <i>NeurIPS&rsquo;21</i></p>
 </li>
 <li><p>L. Fan, <b>S. Liu</b>, P.-Y. Chen, G. Zhang, C. Gan. When does Contrastive Learning Preserve Adversarial Robustness from Pretraining to Finetuning?, <i>NeurIPS&rsquo;21</i></p>
