--- a/group.html
+++ b/group.html
@@ -53,7 +53,7 @@
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/yihua.png" alt="94" width="91px" />&nbsp;</td>
+<img src="images/yihua2.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://github.com/StarkSchroedinger">Yihua Zhang</a></p>
 </li>
@@ -76,6 +76,11 @@
 </li>
 </ul>
 </td></tr></table>
+<h2>Past Visiting Students/Research Interns</h2>
+<ul>
+<li><p>Fan Chen</p>
+</li>
+</ul>
 </td>
 </tr>
 </table>
