--- a/group.html
+++ b/group.html
@@ -78,7 +78,8 @@
 </td></tr></table>
 <h2>Past Visiting Students/Research Interns</h2>
 <ul>
-<li><p>Fan Chen</p>
+<li><p>Fan Chen (College of Information and Computer Sciences, University of Massachusetts Amherst, USA
+)</p>
 </li>
 </ul>
 </td>
