--- a/CSE891.html
+++ b/CSE891.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
+<div class="menu-item"><a href="links\CV_SL_2021.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
@@ -31,14 +31,14 @@
 <ul>
 <li><p><b>Course time/location</b>: Tu & Th 10:20 AM-11:40 AM EST; Instructor's zoom</p>
 </li>
-<li><p><b>Instructor</b>: <a href="index.html" target=&ldquo;blank&rdquo;>Prof. Sijia Liu</a></p>
+<li><p><b>Instructor</b>: <a href="index.html">Prof. Sijia Liu</a></p>
 </li>
 <li><p><b>Instructor's office hour</b>: General Q&A on Th 12-1 PM, or by appointment
 
 
 </p>
 </li>
-<li><p><b>Grading policy</b>: Homework assignments, course presentations, final project </p>
+<li><p><b><a href="https://github.com/lsjxjtu/lsjxjtu.github.io/blob/master/CSE891_AdvML.pdf">Grading policy</a></b>: Homework assignments, course presentations, final project </p>
 </li>
 </ul>
 <h2>Course description </h2>
