--- a/CSE891.html
+++ b/CSE891.html
@@ -38,7 +38,7 @@
 
 </p>
 </li>
-<li><p><b><a href="https://github.com/lsjxjtu/lsjxjtu.github.io/blob/master/CSE891_AdvML.pdf">Grading policy</a></b>: Homework assignments, course presentations, final project </p>
+<li><p><b>Grading policy</b>: Homework assignments, course presentations, final project. <a href="https://github.com/lsjxjtu/lsjxjtu.github.io/blob/master/CSE891_AdvML.pdf">[Details]</a></p>
 </li>
 </ul>
 <h2>Course description </h2>
