--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <table class="imgtable"><tr><td>
 <img src="images/sijia.png" alt="Temp" width="130px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor, <a href="https://www.cse.msu.edu/">Department of Computer Science and Engineering</a>,<br />
-<a href="https://msu.edu/">Michigan State University</a> East Lansing, MI 48824<br />
+<a href="https://msu.edu/">Michigan State University</a>, East Lansing, MI 48824<br />
 Affiliate Professor, <a href="https://mitibmwatsonailab.mit.edu/">MIT-IBM Watson AI Lab</a>, Cambridge, MA 02142<br />
 Email: liusiji5@msu.edu <br />
 Twitter: @sijialiu17 <br />
@@ -60,6 +60,9 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
+<p>* Congratulations to Yimeng Zhang, Yuguang Yao, Jianghan Jia for their first ICLR papers.</p>
+<p>* Five papers in <a href="https://iclr.cc/">ICLR 2022</a> (<a href="https://openreview.net/pdf?id=gpp7cf0xdfN">Reverse Engineering of Adversaries</a>, <a href="https://openreview.net/pdf?id=W9G_ImpHlQd">Black-Box Defense</a>, <a href="https://openreview.net/pdf?id=VqzXzA9hjaX">Learning to Optimize</a>, <a href="https://openreview.net/pdf?id=qiMXBIf4NfB">Self-Training Theory</a>, <a href="https://openreview.net/pdf?id=oj2yn1Q4Ett">Distributed Learning</a>)</p>
+<p>* Our work on <b>interpreting and advancing adversarial training via bi-level optimization</b> is now available on <a href="https://arxiv.org/pdf/2112.12376.pdf">arXiv</a>; equally contributed by Yihua Zhang (MSU) and Guanhua Zhang (UCSB)</p>
 <p>* Grateful to receive a DARPA IP2 AIE Grant as a Co-PI.</p>
 <p>* <i>Five</i> papers in <a href="https://nips.cc">NeurIPS 2021</a>.</p>
 <p>* Our MSU-NEU team (with PI <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a> and co-PI <a href="https://web.northeastern.edu/xuelin/?page_id=60">Xue Lin</a>) entered the Phase 2 of DARPA AIE RED.</p>
@@ -72,7 +75,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-15 18:30:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-21 07:07:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
