--- a/group.html
+++ b/group.html
@@ -79,7 +79,9 @@
 <h2>Past Visiting Students/Research Interns</h2>
 <ul>
 <li><p>Fan Chen (College of Information and Computer Sciences, University of Massachusetts Amherst, USA
-)</p>
+), May 2021 - Sept. 2021</p>
+</li>
+<li><p>Vardaan Taneja (Undergraduate student, Indian Institute Of Technology, Delhi), May 2021 - Sept. 2021</p>
 </li>
 </ul>
 </td>
