--- a/group.html
+++ b/group.html
@@ -78,10 +78,9 @@
 </td></tr></table>
 <h2>Past Visiting Students/Research Interns</h2>
 <ul>
-<li><p>Fan Chen (College of Information and Computer Sciences, University of Massachusetts Amherst, USA
-), May 2021 - Sept. 2021</p>
+<li><p>Fan Chen (Graduate student,  University of Massachusetts Amherst, USA), May 2021 - Sept. 2021; Research project: Sign-MAML [<a href="https://arxiv.org/pdf/2109.07497.pdf">Paper</a> at NeurIPS MetaLearn&rsquo;21]</p>
 </li>
-<li><p>Vardaan Taneja (Undergraduate student, Indian Institute Of Technology, Delhi), May 2021 - Sept. 2021</p>
+<li><p>Vardaan Taneja (Undergraduate student, Indian Institute Of Technology, Delhi), May 2021 - Sept. 2021; Research project: Backdoor for image reconstruction [Paper at ICASSP&rsquo;22]</p>
 </li>
 </ul>
 </td>
