--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,16 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Gong*, Y. Yao*, Y. Li, Y. Zhang, X. Liu, X. Lin, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=gpp7cf0xdfN">Reverse Engineering of Imperceptible Adversarial Image Perturbations</a>, <i>ICLR&rsquo;22</i></p>
+</li>
+<li><p>S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong, <a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>, <i>ICLR&rsquo;22</i></p>
+</li>
+<li><p>Y. Zhang, Y. Yao, J. Jia, J. Yi, M. Hong, S. Chang, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=W9G_ImpHlQd">How to Robustify Black-Box ML Models? A Zeroth-Order Optimization Perspective</a>, <i>ICLR&rsquo;22</i> <tt>(spotlight, acceptance rate 5%)</tt></p>
+</li>
+<li><p>T. Huang, T. Chen, <b>S. Liu</b>, S. Chang, L. Amini, Z. Wang, <a href="https://openreview.net/forum?id=VqzXzA9hjaX">Optimizer Amalgamation</a>, <i>ICLR&rsquo;22</i></p>
+</li>
+<li><p>P. Khanduri, H. Yang, M. Hong, J. Liu, H.T. Wai, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=oj2yn1Q4Ett">Decentralized Learning for Overparameterized Problems: A Multi-Agent Kernel Approximation Approach</a>, <i>ICLR&rsquo;22</i></p>
+</li>
 <li><p>C. Fan, P. Ram and <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2109.07497.pdf">Sign-MAML: Efficient Model-Agnostic Meta-Learning by SignSGD</a>, <i>NeurIPS Workshop MetaLearn, 2021</i></p>
 </li>
 <li><p>X. Ma, G. Yuan, X. Shen, T. Chen, X. Chen, X. Chen, N. Liu, M. Qin, <b>S. Liu</b>, Z. Wang, Y. Wang. <a href="https://arxiv.org/pdf/2107.00166.pdf">Sanity Checks for Lottery Tickets: Does Your Winning Ticket Really Win the Jackpot?</a>, <i>NeurIPS&rsquo;21</i></p>
