--- a/group.html
+++ b/group.html
@@ -76,6 +76,19 @@
 </li>
 </ul>
 </td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/yangru.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="https://github.com/jinghanjia">Yangru Zhou</a></p>
+</li>
+<li><p>M.S. Student in Computer Science (Spring 2022-current)</p>
+</li>
+<li><p>M.S. Biomedical Engineer @ University of Florida, USA</p>
+</li>
+<li><p>B.S. Bioinformatics @ Huazhong Agricultural University, China</p>
+</li>
+</ul>
+</td></tr></table>
 <h2>Past Visiting Students/Research Interns</h2>
 <ul>
 <li><p>Fan Chen (Graduate student,  University of Massachusetts Amherst, USA), May 2021 - Sept. 2021; Research project: Sign-MAML [<a href="https://arxiv.org/pdf/2109.07497.pdf">Paper</a> at NeurIPS MetaLearn&rsquo;21]</p>
