--- a/group.html
+++ b/group.html
@@ -27,7 +27,7 @@
 <div id="toptitle">
 <h1>Optimization and Trustworthy ML Group </h1>
 </div>
-<h2>Current Ph.D. students </h2>
+<h2>Current Group Members</h2>
 <table class="imgtable"><tr><td>
 <img src="images/yuguang.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
@@ -79,7 +79,7 @@
 <table class="imgtable"><tr><td>
 <img src="images/yangru.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p><a href="https://github.com/jinghanjia">Yangru Zhou</a></p>
+<li><p><a href="https://www.linkedin.com/in/yangru-zhou-a3223a17a/">Yangru Zhou</a></p>
 </li>
 <li><p>M.S. Student in Computer Science (Spring 2022-current)</p>
 </li>
