--- a/group.html
+++ b/group.html
@@ -77,6 +77,19 @@
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
+<img src="images/jatarong.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="https://scholar.google.co.th/citations?user=UyiC8TQAAAAJ&amp;hl=en">Jaturong Kongmanee</a></p>
+</li>
+<li><p>Ph.D. candidate in Computer Science (Spring 2021 - current)</p>
+</li>
+<li><p>M.S. Computer Science @ Texas Tech University, USA</p>
+</li>
+<li><p>B.S. Computer Science @ King Mongkut's University of Technology Thonburi, Thailand</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
 <img src="images/yangru.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://www.linkedin.com/in/yangru-zhou-a3223a17a/">Yangru Zhou</a></p>
