--- a/group.html
+++ b/group.html
@@ -77,7 +77,7 @@
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/jatarong.png" alt="94" width="91px" />&nbsp;</td>
+<img src="images/jaturong.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://scholar.google.co.th/citations?user=UyiC8TQAAAAJ&amp;hl=en">Jaturong Kongmanee</a></p>
 </li>
