--- a/group.html
+++ b/group.html
@@ -90,6 +90,17 @@
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
+<img src="images/arthur.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p>Aochuan(Arthur) Chen</p>
+</li>
+<li><p>Ph.D. candidate in Computer Science (Fall 2022 - current)</p>
+</li>
+<li><p>B.S. Automation @ Tsinghua University, China</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
 <img src="images/yangru.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://www.linkedin.com/in/yangru-zhou-a3223a17a/">Yangru Zhou</a></p>
