--- a/group.html
+++ b/group.html
@@ -92,7 +92,7 @@
 <table class="imgtable"><tr><td>
 <img src="images/arthur.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Aochuan(Arthur) Chen</p>
+<li><p><a href="https://www.phoveran.com">Aochuan(Arthur) Chen</a></p>
 </li>
 <li><p>Ph.D. candidate in Computer Science (Fall 2022 - current)</p>
 </li>
