--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
-<div class="menu-item"><a href="https://www.optml-group.com">Group</a></div>
+<div class="menu-item"><a href="https://www.optml-group.com">OPTML&nbsp;Group</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="CSE891.html">CSE891</a></div>
 <div class="menu-category">Others</div>
@@ -77,7 +77,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-08 17:10:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-08 17:12:11 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
