--- a/group.html
+++ b/group.html
@@ -17,7 +17,7 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
-<div class="menu-item"><a href="group.html" class="current">Group</a></div>
+<div class="menu-item"><a href="https://www.optml-group.com">OPTML&nbsp;Group</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="CSE891.html">CSE891</a></div>
 <div class="menu-category">Others</div>
@@ -26,14 +26,11 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>OPtimization and Trustworthy ML (OPTML) Group</h1>
-<div id="subtitle">&nbsp;&nbsp;&nbsp;</div>
 </div>
-<p>{}{img_left}{images/logo_optml.png}{94}{91}</p>
-<div class="infoblock">
-<div class="blockcontent">
 <h2>Current Group Members</h2>
-</div></div>
-<ul>
+<table class="imgtable"><tr><td>
+<img src="images/yuguang.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
 <li><p><a href="https://www.linkedin.com/in/tonyyaomsu/">Yuguang(Tony) Yao</a></p>
 </li>
 <li><p>Ph.D. candidate in Computer Science (Spring 2021-current)</p>
@@ -41,10 +38,10 @@
 <li><p>B.S. Automation @ Tsinghua University, China</p>
 </li>
 </ul>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
-<ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/damon_cir.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
 <li><p><a href="https://damon-demon.github.io">Yimeng(Damon) Zhang</a></p>
 </li>
 <li><p>Ph.D. candidate in Computer Science (Spring 2021-current)</p>
@@ -54,10 +51,10 @@
 <li><p>BEng Electrical and Electronic Engineering @ University of Sheffield, UK</p>
 </li>
 </ul>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
-<ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/yihua2.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
 <li><p><a href="https://github.com/StarkSchroedinger">Yihua Zhang</a></p>
 </li>
 <li><p>Ph.D. candidate in Computer Science (Fall 2021-current)</p>
@@ -65,10 +62,10 @@
 <li><p>B.S. Mechanical Engineering @ Huazhong University of Science and Technology, China</p>
 </li>
 </ul>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
-<ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/jinghan.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
 <li><p><a href="https://github.com/jinghanjia">Jinghan Jia</a></p>
 </li>
 <li><p>Ph.D. candidate in Computer Science (Fall 2021-current)</p>
@@ -78,10 +75,10 @@
 <li><p>B.S. Computer Science @ University of Science and Technology of China, China</p>
 </li>
 </ul>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
-<ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/jaturong.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
 <li><p><a href="https://scholar.google.co.th/citations?user=UyiC8TQAAAAJ&amp;hl=en">Jaturong Kongmanee</a></p>
 </li>
 <li><p>Ph.D. candidate in Computer Science (Spring 2021 - current)</p>
@@ -91,10 +88,10 @@
 <li><p>B.S. Computer Science @ King Mongkut's University of Technology Thonburi, Thailand</p>
 </li>
 </ul>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
-<ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/arthur.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
 <li><p><a href="https://www.phoveran.com">Aochuan(Arthur) Chen</a></p>
 </li>
 <li><p>Ph.D. candidate in Computer Science (Fall 2022 - current)</p>
@@ -102,10 +99,10 @@
 <li><p>B.S. Automation @ Tsinghua University, China</p>
 </li>
 </ul>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
-<ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/yangru.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
 <li><p><a href="https://www.linkedin.com/in/yangru-zhou-a3223a17a/">Yangru Zhou</a></p>
 </li>
 <li><p>M.S. Student in Computer Science (Spring 2022-current)</p>
@@ -115,8 +112,7 @@
 <li><p>B.S. Bioinformatics @ Huazhong Agricultural University, China</p>
 </li>
 </ul>
-<div class="infoblock">
-<div class="blockcontent">
+</td></tr></table>
 <h2>Past Visiting Students/Research Interns</h2>
 <ul>
 <li><p>Fan Chen (Graduate student,  University of Massachusetts Amherst, USA), May 2021 - Sept. 2021; Research project: Sign-MAML [<a href="https://arxiv.org/pdf/2109.07497.pdf">Paper</a> at NeurIPS MetaLearn&rsquo;21]</p>
