--- a/funding.html
+++ b/funding.html
@@ -13,11 +13,11 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
+<div class="menu-item"><a href="links\CV_SL_2021.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html" class="current">Projects</a></div>
-<div class="menu-item"><a href="group.html">Group</a></div>
+<div class="menu-item"><a href="https://www.optml-group.com">OPTML&nbsp;Group</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="CSE891.html">CSE891</a></div>
 <div class="menu-category">Others</div>
@@ -121,9 +121,9 @@
 </li>
 </ol>
 <h1>Research Support</h1>
-<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a> and <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>.</p>
+<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, and <a href="https://research.cisco.com">Cisco Research</a>.</p>
 <table class="imgtable"><tr><td>
-<img src="images/support.png" alt="90" width="420px" />&nbsp;</td>
+<img src="images/support_update.png" alt="90" width="420px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 </td>
 </tr>
