--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
-<div class="menu-item"><a href="group.html">Group</a></div>
+<div class="menu-item"><a href="https://www.optml-group.com">OPTML&nbsp;Group</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="CSE891.html">CSE891</a></div>
 <div class="menu-category">Others</div>
@@ -31,6 +31,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>V. Asnani, X. Yin, T. Hassner, <b>S. Liu</b>, X. Liu, Proactive Image Manipulation Detection, <i>CVPR&rsquo;22</i></p>
+</li>
 <li><p>Y. Gong*, Y. Yao*, Y. Li, Y. Zhang, X. Liu, X. Lin, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=gpp7cf0xdfN">Reverse Engineering of Imperceptible Adversarial Image Perturbations</a>, <i>ICLR&rsquo;22</i></p>
 </li>
 <li><p>S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong, <a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>, <i>ICLR&rsquo;22</i></p>
