--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>T. Chen*, Z. Zhang*, Y. Zhang*, S. Chang, <b>S. Liu</b>, Z. Wang, Quarantine: Sparsity Can Uncover the Trojan Attack Trigger for Free, , <i>CVPR&rsquo;22</i></p>
+</li>
 <li><p>V. Asnani, X. Yin, T. Hassner, <b>S. Liu</b>, X. Liu, Proactive Image Manipulation Detection, <i>CVPR&rsquo;22</i></p>
 </li>
 <li><p>Y. Gong*, Y. Yao*, Y. Li, Y. Zhang, X. Liu, X. Lin, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=gpp7cf0xdfN">Reverse Engineering of Imperceptible Adversarial Image Perturbations</a>, <i>ICLR&rsquo;22</i></p>
