--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
+<p>* CFP: 1st Workshop on New Frontiers in Adversarial Machine Learning at ICML&rsquo;22 (<a href="https://advml-frontier.github.io/">AdvML-Frontiers@ICML&rsquo;22</a>)</p>
 <p>* Grateful to receive a gift funding from Cisco Research as the PI.</p>
 <p>* Congratulations to Yihua Zhang for his first CVPR paper.</p>
 <p>* <i>Two</i> papers in <a href="https://cvpr2022.thecvf.com">CVPR 2022</a>.</p>
@@ -78,7 +79,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-14 09:13:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-01 23:17:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
