--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <img src="images/sijia.png" alt="Temp" width="130px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor, <a href="https://www.cse.msu.edu/">Department of Computer Science and Engineering</a>,<br />
 <a href="https://msu.edu/">Michigan State University</a>, East Lansing, MI 48824<br />
-Affiliate Professor, <a href="https://mitibmwatsonailab.mit.edu/">MIT-IBM Watson AI Lab</a>, Cambridge, MA 02142<br />
+Affiliated Professor, <a href="https://mitibmwatsonailab.mit.edu/">MIT-IBM Watson AI Lab</a>, Cambridge, MA 02142<br />
 Email: liusiji5@msu.edu <br />
 Twitter: @sijialiu17 <br />
 <a href="https://scholar.google.com/citations?user=C7dO_UgAAAAJ&amp;hl=en">Google scholar</a> <br /></p>
@@ -79,7 +79,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-01 23:17:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-03 07:27:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
