--- a/index.html
+++ b/index.html
@@ -60,26 +60,27 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
-<p>* CFP: 1st Workshop on New Frontiers in Adversarial Machine Learning at ICML&rsquo;22 (<a href="https://advml-frontier.github.io/">AdvML-Frontiers@ICML&rsquo;22</a>)</p>
+<p>* <i>One</i> paper in <a href="https://ijcai-22.org/">IJCAI&rsquo;22</a>.</p>
+<p>* CFP: 1st Workshop on New Frontiers in Adversarial Machine Learning at ICML&rsquo;22 (<a href="https://advml-frontier.github.io/">AdvML-Frontiers@ICML&rsquo;22</a>).</p>
 <p>* Grateful to receive a gift funding from Cisco Research as the PI.</p>
 <p>* Congratulations to Yihua Zhang for his first CVPR paper.</p>
 <p>* <i>Two</i> papers in <a href="https://cvpr2022.thecvf.com">CVPR 2022</a>.</p>
 <p>* Congratulations to Yimeng Zhang, Yuguang Yao, Jianghan Jia for their first ICLR papers.</p>
-<p>* <i>Five</i> papers in <a href="https://iclr.cc/">ICLR 2022</a>: <a href="https://openreview.net/pdf?id=gpp7cf0xdfN">Reverse Engineering of Adversaries</a>, <a href="https://openreview.net/pdf?id=W9G_ImpHlQd">Black-Box Defense</a> (spotlight), <a href="https://openreview.net/pdf?id=VqzXzA9hjaX">Learning to Optimize</a>, <a href="https://openreview.net/pdf?id=qiMXBIf4NfB">Self-Training Theory</a>, <a href="https://openreview.net/pdf?id=oj2yn1Q4Ett">Distributed Learning</a>.</p>
+<p>* <i>Five</i> papers in <a href="https://iclr.cc/">ICLR 2022</a>: <a href="https://openreview.net/pdf?id=gpp7cf0xdfN">Reverse Engineering of Adversaries</a>, <a href="https://openreview.net/pdf?id=W9G_ImpHlQd">Black-Box Defense</a>. (spotlight), <a href="https://openreview.net/pdf?id=VqzXzA9hjaX">Learning to Optimize</a>, <a href="https://openreview.net/pdf?id=qiMXBIf4NfB">Self-Training Theory</a>, <a href="https://openreview.net/pdf?id=oj2yn1Q4Ett">Distributed Learning</a>.</p>
 <p>* Our work on <a href="https://arxiv.org/pdf/2112.12376.pdf"><i>interpreting and advancing adversarial training via bi-level optimization</i></a> is now available on arXiv; equally contributed by Yihua Zhang (MSU) and Guanhua Zhang (UCSB).</p>
 <p>* Grateful to receive a DARPA IP2 AIE Grant as a Co-PI.</p>
 <p>* <i>Five</i> papers in <a href="https://nips.cc">NeurIPS 2021</a>.</p>
 <p>* Our MSU-NEU team (with PI <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a> and co-PI <a href="https://web.northeastern.edu/xuelin/?page_id=60">Xue Lin</a>) entered the Phase 2 of DARPA AIE RED.</p>
-<p>* <i>One</i> paper in <a href="https://icml.cc">ICML 2021</a></p>
+<p>* <i>One</i> paper in <a href="https://icml.cc">ICML 2021</a>.</p>
 <p>* MIT news ‘<a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">Toward deep-learning models that can reason about code more like humans</a>’ on our ICLR’21 work ‘Adversarial Programs’ [<a href="https://openreview.net/pdf?id=PH5PH9ZO_4">paper</a>, <a href="https://github.com/ALFA-group/adversarial-code-generation">code</a>].</p>
 <p>* <i>Two</i> papers in <a href="http://cvpr2021.thecvf.com">CVPR 2021</a>.</p>
-<p>* <i>Two</i> papers in <a href="https://aistats.org/aistats2021/index.html">AISTATS 2021</a></p>
-<p>* <i>Four</i> papers in <a href="https://iclr.cc">ICLR 2021</a> </p>
-<p>* <i>Three</i> papers in <a href="https://aaai.org/Conferences/AAAI-21/">AAAI 2021</a></p>
-<p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI</p>
+<p>* <i>Two</i> papers in <a href="https://aistats.org/aistats2021/index.html">AISTATS 2021</a>.</p>
+<p>* <i>Four</i> papers in <a href="https://iclr.cc">ICLR 2021</a>.</p>
+<p>* <i>Three</i> papers in <a href="https://aaai.org/Conferences/AAAI-21/">AAAI 2021</a>.</p>
+<p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-03 07:27:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-22 13:17:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
