--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,9 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>T. Chen*, Z. Zhang*, Y. Zhang*, S. Chang, <b>S. Liu</b>, Z. Wang, Quarantine: Sparsity Can Uncover the Trojan Attack Trigger for Free, , <i>CVPR&rsquo;22</i></p>
+<li><p>P. Zhao, P. Ram, S. Lu, Y. Yao, D. Bouneffouf, X. Lin, <b>S. Liu</b>, Learning to Generate Image Source-Agnostic Universal Adversarial Perturbations, <i>IJCAI&rsquo;22</i></p>
+</li>
+<li><p>T. Chen*, Z. Zhang*, Y. Zhang*, S. Chang, <b>S. Liu</b>, Z. Wang, Quarantine: Sparsity Can Uncover the Trojan Attack Trigger for Free, <i>CVPR&rsquo;22</i></p>
 </li>
 <li><p>V. Asnani, X. Yin, T. Hassner, <b>S. Liu</b>, X. Liu, Proactive Image Manipulation Detection, <i>CVPR&rsquo;22</i></p>
 </li>
