--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Xie, D. Wang, P.-Y. Chen, J. Xiong, <b>S. Liu</b>, S. Koyejo, A Word is Worth A Thousand Dollars: Adversarial Attack on Tweets Fools Stock Prediction, <i>2022 Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL&rsquo;22)</i>.</p>
+</li>
 <li><p>P. Zhao, P. Ram, S. Lu, Y. Yao, D. Bouneffouf, X. Lin, <b>S. Liu</b>, Learning to Generate Image Source-Agnostic Universal Adversarial Perturbations, <i>IJCAI&rsquo;22</i></p>
 </li>
 <li><p>T. Chen*, Z. Zhang*, Y. Zhang*, S. Chang, <b>S. Liu</b>, Z. Wang, Quarantine: Sparsity Can Uncover the Trojan Attack Trigger for Free, <i>CVPR&rsquo;22</i></p>
