--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
+<p>* <i>One</i> paper in <a href="https://www.auai.org/uai2022/">UAI’22</a> (Oral presentation).</p>
+<p>* <i>Five</i> papers in <a href="https://icml.cc/Conferences/2022/CallForPapers">ICML’22</a>.</p>
 <p>* <i>One</i> paper in <a href="https://2022.naacl.org">NAACL&rsquo;22</a>.</p>
 <p>* <i>One</i> paper in <a href="https://ijcai-22.org/">IJCAI&rsquo;22</a>.</p>
 <p>* CFP: 1st Workshop on New Frontiers in Adversarial Machine Learning at ICML&rsquo;22 (<a href="https://advml-frontier.github.io/">AdvML-Frontiers@ICML&rsquo;22</a>).</p>
@@ -81,7 +83,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-05 07:26:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-16 12:58:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
