--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Congratulations to Yihua Zhang for his first CVPR paper.</p>
 <p>* <i>Two</i> papers in <a href="https://cvpr2022.thecvf.com">CVPR 2022</a>.</p>
 <p>* Congratulations to Yimeng Zhang, Yuguang Yao, Jianghan Jia for their first ICLR papers.</p>
-<p>* <i>Five</i> papers in <a href="https://iclr.cc/">ICLR 2022</a>: <a href="https://openreview.net/pdf?id=gpp7cf0xdfN">Reverse Engineering of Adversaries</a>, <a href="https://openreview.net/pdf?id=W9G_ImpHlQd">Black-Box Defense</a>. (spotlight), <a href="https://openreview.net/pdf?id=VqzXzA9hjaX">Learning to Optimize</a>, <a href="https://openreview.net/pdf?id=qiMXBIf4NfB">Self-Training Theory</a>, <a href="https://openreview.net/pdf?id=oj2yn1Q4Ett">Distributed Learning</a>.</p>
+<p>* <i>Five</i> papers in <a href="https://iclr.cc/">ICLR 2022</a>: <a href="https://openreview.net/pdf?id=gpp7cf0xdfN">Reverse Engineering of Adversaries</a>, <a href="https://openreview.net/pdf?id=W9G_ImpHlQd">Black-Box Defense</a> (spotlight), <a href="https://openreview.net/pdf?id=VqzXzA9hjaX">Learning to Optimize</a>, <a href="https://openreview.net/pdf?id=qiMXBIf4NfB">Self-Training Theory</a>, <a href="https://openreview.net/pdf?id=oj2yn1Q4Ett">Distributed Learning</a>.</p>
 <p>* Our work on <a href="https://arxiv.org/pdf/2112.12376.pdf"><i>interpreting and advancing adversarial training via bi-level optimization</i></a> is now available on arXiv; equally contributed by Yihua Zhang (MSU) and Guanhua Zhang (UCSB).</p>
 <p>* Grateful to receive a DARPA IP2 AIE Grant as a Co-PI.</p>
 <p>* <i>Five</i> papers in <a href="https://nips.cc">NeurIPS 2021</a>.</p>
@@ -83,7 +83,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-16 12:58:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-17 06:39:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
