--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,18 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>G. Zhang*, S. Lu*, Y. Zhang, X. Chen, P.-Y. Chen, Q. Fan, L. Martie, L. Horesh, M. Hong, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a>, <i>38th Conference on Uncertainty in Artificial Intelligence (UAI)</i> <tt>(Oral, 5% acceptance rate)</tt></p>
+</li>
+<li><p>Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting and advancing fast adversarial training through the lens of bi-level optimization</a>, <i>ICML&rsquo;22</i></p>
+</li>
+<li><p>T. Chen, Z. Zhang, <b>S. Liu</b>, Y. Zhang, S. Chang, Z. Wang, <a href="https://arxiv.org/pdf/2206.04762.pdf">Data-Efficient Double-Win Lottery Tickets from Robust Pre-training</a>, <i>ICML&rsquo;22</i></p>
+</li>
+<li><p>T. Chen*, H. Zhang*, Z. Zhang, S. Chang, <b>S. Liu</b>, P.-Y. Chen, Z. Wang, <a href="https://arxiv.org/pdf/2206.07839v1.pdf">Linearity Grafting: How Neuron Pruning Helps Certifiable Robustness</a>, <i>ICML&rsquo;22</i></p>
+</li>
+<li><p>C.-Y. Ko, J. Mohapatra, <b>S. Liu</b>, P.-Y. Chen, L. Daniel, L. Weng,<a href="https://arxiv.org/pdf/2112.04468.pdf">Revisiting Contrastive Learning through the Lens of Neighborhood Component Analysis: an Integrated Framework</a>, <i>ICML&rsquo;22</i></p>
+</li>
+<li><p>H. Li, M. Weng, <b>S. Liu</b>, P.-Y. Chen, J. Xiong, Generalization Guarantee of Training Graph Convolutional Networks with Graph Topology Sampling, <i>ICML&rsquo;22</i></p>
+</li>
 <li><p>Y. Xie, D. Wang, P.-Y. Chen, J. Xiong, <b>S. Liu</b>, S. Koyejo, A Word is Worth A Thousand Dollars: Adversarial Attack on Tweets Fools Stock Prediction, <i>2022 Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL&rsquo;22)</i>.</p>
 </li>
 <li><p>P. Zhao, P. Ram, S. Lu, Y. Yao, D. Bouneffouf, X. Lin, <b>S. Liu</b>, Learning to Generate Image Source-Agnostic Universal Adversarial Perturbations, <i>IJCAI&rsquo;22</i></p>
